--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -570,3 +570,26 @@ form.loading {
         object-fit: contain
     }
 }
+
+.bg-dark-arrow:after {
+    content:'';
+    position: absolute;
+    top:100%;
+    left: 50%;
+    margin-left: -50px;
+    width: 0;
+    height: 0;
+    border-top: solid 50px #131313;
+    border-left: solid 50px transparent;
+    border-right: solid 50px transparent;
+}
+
+.bg-dark-arrow {
+    position: relative;
+}
+
+.bg-dark {
+    background: linear-gradient(90deg,rgba(30,30,30,1) 0%,rgba(10,10,10,1) 100%);
+    width:100%;
+    color: #f6f6f7;
+}
