MP Absence detail graph

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -489,7 +489,7 @@ form.loading {
     }
 }
 
-.political-group-dot-color {
+.dot-color {
     border-radius: 50%;
     width: 10px;
     aspect-ratio: 1;
