--- a/templates/common/datatableTemplate/_political_group_with_color.html.twig
+++ b/templates/common/datatableTemplate/_political_group_with_color.html.twig
@@ -1,4 +1,4 @@
 <div class="d-flex gap-2">
-    <div class=" political-group-dot-color align-self-center" style="background: #{{ resource.color }}"></div>
+    <div class=" dot-color align-self-center" style="background: #{{ resource.color }}"></div>
     {{ resource.shortLabel }}
 </div>
