--- a/assets/scss/_navtabs.scss
+++ b/assets/scss/_navtabs.scss
@@ -1,34 +1,3 @@
-//.nav-tabs {
-//  display: flex;
-//  justify-content: center;
-//
-//  .nav-link {
-//    border-radius: 16px;
-//    padding: 14px 24px;
-//    position: relative;
-//
-//    &::after {
-//      opacity: 0;
-//      z-index: -1;
-//      content: '';
-//      width: 29px;
-//      height: 26px;
-//      background: #f5f8fa;
-//      border-top-right-radius: 15%;
-//      position: absolute;
-//      color: #7e8299;
-//      bottom: 0;
-//      left: calc(50% - 15px);
-//      transform: rotate(152deg) skewX(35deg) scale(1.92);
-//      transition: opacity 0.15s ease-in-out, background-color 0.15s;
-//    }
-//
-//    &.active {
-//      background-color: #f5f8fa;
-//
-//      &::after {
-//        opacity: 1;
-//      }
-//    }
-//  }
-//}
+.nav-tabs {
+  border-bottom: solid 1px rgba(151, 157, 165, 0.2);
+}
